hphp/hack/test/typecheck/nonnull/await_nonnull.php.exp
File "await_nonnull.php", line 3, characters 16-16:
Invalid return type (Typing[4336])
File "await_nonnull.php", line 3, characters 16-16:
Expected `Awaitable<void>` because this function does not always return a value
File "await_nonnull.php", line 3, characters 31-34:
But got `void`
File "await_nonnull.php", line 3, characters 16-16:
Invalid return type (Typing[4336])
File "await_nonnull.php", line 3, characters 31-34:
Expected `void`
File "await_nonnull.php", line 3, characters 16-16:
But got `Awaitable<void>` because this function does not always return a value
File "await_nonnull.php", line 3, characters 16-16:
Was expecting an `Awaitable` return type hint (Typing[4174])
File "await_nonnull.php", line 4, characters 3-10:
`await` can only operate on an `Awaitable` (Typing[4110])
File "await_nonnull.php", line 4, characters 3-10:
Expected `Awaitable<[unresolved]>`
File "await_nonnull.php", line 3, characters 18-24:
But got `nonnull`
